<resources>
    <string name="app_name">PIMA Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button_charge">Charge ₱</string>
    <string name="viewpager_keypad">Keypad</string>
    <string name="viewpager_itemlibrary">Items</string>
    <string name="keypad_addnote">Add Note</string>
    <string name="default_amountValue_zero">0.00</string>
    <string name="spinner_prompt">All Items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_activity">Items</string>
    <string-array name="items">
        <item>All Items</item>
        <item>Categories</item>
        <item>Discount</item>
    </string-array>
    <string name="title_activity_create_item">Create Item</string>
    <string name="action_search">Search Item</string>
    <string name="empty_listitem">Create Item</string>
    <string name="error_field_empty">This is required</string>
    <string name="create_category">Create Category</string>
    <string name="category_name">Category</string>
    <string name="empty_listcategory">Create Category</string>
    <string name="title_activity_create_category">Create Category</string>
    <string name="price_hint">Price</string>
    <string name="peso_symbol">₱</string>
    <string name="default_amountValue">₱0.00</string>
    <string name="alert_undo_deletion">Do you want to undo selection?</string>
    <string name="create_discount">Create Discount</string>
    <string name="create_discount_discription">Discounts are applied to the ticket before tax is calculated.</string>
    <string name="delete_title">Delete</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="alert_delete_message">Are you sure you want to delete</string>
    <string name="empty_listdiscount">Create Discount</string>
    <string name="empty_library_category_list">No items in</string>
    <string name="have_current_sale">Current Sale</string>
    <string name="no_current_sale">No Sale</string>
    <string name="edit_current_sales_item_note">NOTE AND QUANTITY</string>
    <string name="edit_current_sales_item_note_hint">Add a note</string>
    <string name="remove_item">Remove Item</string>
    <string name="confirm_remove_item">Confirm Remove Item</string>
    <string name="received_amount">Received Amount</string>
    <string name="charge_your_done">You\'re all done.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Branch Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_register">or Create Branch</string>
    <string name="register_branch_name">Branch Name</string>
    <string name="action_register_branch">Create Branch</string>
    <string name="register_branch_email">Email</string>
    <string name="title_register_branch">Register Branch</string>
    <string name="prompt_address">Branch Location</string>
    <string name="register_show_password">Show Password</string>
    <string name="register_error_branch_exist">Branch name or email already exist.</string>
    <string name="register_success">New branch successfully created.</string>
    <string name="connection_error">Connection interrupted. Check you internet connection.</string>
    <string name="error_branch_name_has_space">Branch name should not contain any space. Replace with underscore.</string>
    <string name="history_error">Unable to download payments.</string>
    <string name="action_time_frame">Customize Sales Reports</string>
    <string name="preference_login">Login</string>
    <string name="preference_remember_title">Remember Login</string>
    <string name="preference_remember_summary">Remember username and password.</string>
    <string name="preference_credentials">User Profile</string>
    <string name="preference_branch_name">Edit branch name</string>
    <string name="preference_branch_name_summary">User branch name</string>
    <string name="preference_branch_password">Edit branch password</string>
    <string name="preference_branch_password_summary">Change branch password</string>
    <string name="settings_label">Settings</string>
    <string name="report_no_data">No transaction took place in the time frame you have selected. Try selecting different time frame.</string>
    <string name="report_no_data_title">No transactions for time period</string>
    <string name="history_no_data">No history to display.</string>

</resources>
