<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_login">

        <android.support.v7.preference.CheckBoxPreference
            android:key="preference_remember"
            android:summary="@string/preference_remember_summary"
            android:title="@string/preference_remember_title" />

    </android.support.v7.preference.PreferenceCategory>
<!--
    <android.support.v7.preference.PreferenceCategory android:title="@string/preference_credentials">

        <android.support.v7.preference.EditTextPreference
            android:dialogTitle="@string/preference_branch_name"
            android:key="preference_branch_name"
            android:summary="@string/preference_branch_name_summary"
            android:title="@string/preference_branch_name" />

        <android.support.v7.preference.EditTextPreference
            android:dialogTitle="@string/preference_branch_password_summary"
            android:key="preference_branch_password"
            android:summary="@string/preference_branch_password_summary"
            android:title="@string/preference_branch_password" />

    </android.support.v7.preference.PreferenceCategory>
-->

</android.support.v7.preference.PreferenceScreen>