<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/createItem_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name" />
        </android.support.design.widget.TextInputLayout>

        <com.pimamobile.pima.utils.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            app:typeface="roboto_regular" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/createItem_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.pimamobile.pima.utils.RobotoTextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/peso_symbol"
                app:typeface="roboto_regular" />

            <EditText
                android:id="@+id/createItem_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/createItem_delete"
                style="@style/AppTheme.DeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/delete_button_padding"
                android:paddingRight="@dimen/delete_button_padding"
                android:text="Delete Item"
                android:visibility="gone" />

            <Button
                android:id="@+id/createItem_save"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:text="Save" />
        </RelativeLayout>


    </LinearLayout>

</ScrollView>
